Updated author name

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "license": "proprietary",
     "authors": [
         {
-            "name": "Ottó Radics",
+            "name": "Ottó Radics dr.",
             "homepage": "https://www.webmenedzser.hu"
         }
     ],
